# tardigrade_error_tools

./: .clang-format  .clang-tidy  CMakeLists.txt  README.rst  conda-build.txt  environment.txt  environment.yml  pyproject.toml  style-guide.yml
.github/workflows/: conda-recipe-test.yml  github-clang-lint.yml  github-cmake-lint.yml  github-lint.yml  github-test-headeronly-opt.yml  github-test-headeronly.yml  github-test-opt.yml  github-test.yml
docs/: CMakeLists.txt  Doxyfile.in  changelog.rst  conf.py.in  targets.txt
recipe/: meta.yaml
src/cpp/: CMakeLists.txt  tardigrade_error_tools.cpp  tardigrade_error_tools.h
src/cpp/tests/: CMakeLists.txt  test_tardigrade_error_tools.cpp
src/cython/: CMakeLists.txt  setup.py.in
src/python/: CMakeLists.txt  MANIFEST.in  pyproject.toml.in  settings.py.in  setup.py  setup.py.in
src/python/tardigrade_error_tools/: __init__.py  _settings.py.in
src/python/tardigrade_error_tools/tests/: test_tardigrade_error_tools.py
